@@ -238,64 +238,6 @@ tsi_delink (tree_stmt_iterator *i)
   i->ptr = next;
 }
 
-/* Move all statements in the statement list after I to a new
-   statement list.  I itself is unchanged.  */
-
-tree
-tsi_split_statement_list_after (const tree_stmt_iterator *i)
-{
-  struct tree_statement_list_node *cur, *next;
-  tree old_sl, new_sl;
-
-  cur = i->ptr;
-  /* How can we possibly split after the end, or before the beginning?  */
-  gcc_assert (cur);
-  next = cur->next;
-
-  old_sl = i->container;
-  new_sl = alloc_stmt_list ();
-  TREE_SIDE_EFFECTS (new_sl) = 1;
-
-  STATEMENT_LIST_HEAD (new_sl) = next;
-  STATEMENT_LIST_TAIL (new_sl) = STATEMENT_LIST_TAIL (old_sl);
-  STATEMENT_LIST_TAIL (old_sl) = cur;
-  cur->next = NULL;
-  next->prev = NULL;
-
-  return new_sl;
-}
-
-/* Move all statements in the statement list before I to a new
-   statement list.  I is set to the head of the new list.  */
-
-tree
-tsi_split_statement_list_before (tree_stmt_iterator *i)
-{
-  struct tree_statement_list_node *cur, *prev;
-  tree old_sl, new_sl;
-
-  cur = i->ptr;
-  /* How can we possibly split after the end, or before the beginning?  */
-  gcc_assert (cur);
-  prev = cur->prev;
-
-  old_sl = i->container;
-  new_sl = alloc_stmt_list ();
-  TREE_SIDE_EFFECTS (new_sl) = 1;
-  i->container = new_sl;
-
-  STATEMENT_LIST_HEAD (new_sl) = cur;
-  STATEMENT_LIST_TAIL (new_sl) = STATEMENT_LIST_TAIL (old_sl);
-  STATEMENT_LIST_TAIL (old_sl) = prev;
-  cur->prev = NULL;
-  if (prev)
-    prev->next = NULL;
-  else
-    STATEMENT_LIST_HEAD (old_sl) = NULL;
-
-  return new_sl;
-}
-
 /* Return the first expression in a sequence of COMPOUND_EXPRs,
    or in a STATEMENT_LIST.  */
 
